<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/radio_title"
        android:textSize="@dimen/text_size"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_am1"
            android:textOff="@string/radio_am1"
            android:id="@+id/tbRadioAm1"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_am2"
            android:textOff="@string/radio_am2"
            android:id="@+id/tbRadioAm2"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_fm1"
            android:textOff="@string/radio_fm1"
            android:id="@+id/tbRadioFm1"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_fm2"
            android:textOff="@string/radio_fm2"
            android:id="@+id/tbRadioFm2"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/radio_fm3"
            android:textOff="@string/radio_fm3"
            android:id="@+id/tbRadioFm3"
            android:background="@drawable/button_adb"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical">

            <ImageButton
                android:id="@+id/btnReward"
                android:layout_width="@dimen/intern_btn_size"
                android:layout_height="@dimen/intern_btn_size"
                android:background="@drawable/button_adb"
                android:src="@drawable/ic_skip_previous_white_36dp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtDial"
                android:gravity="center_horizontal"
                android:text="XX,X"
                android:textSize="60dp"
                android:textColor="@color/colorAccent"/>
            <ImageButton
                android:id="@+id/btnForward"
                android:layout_width="@dimen/intern_btn_size"
                android:layout_height="@dimen/intern_btn_size"
                android:background="@drawable/button_adb"
                android:src="@drawable/ic_skip_next_white_36dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtStationName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/radio_stat_name"
            android:gravity="center"
            android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>