<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usb_pendrive_title"
            android:textSize="@dimen/text_title_size"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"/>

        <ListView
            android:id="@+id/list_pendrive_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:choiceMode="multipleChoice"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/colorPrimaryDark">

            <Button
                android:id="@+id/btn_usb_toright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_toright"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usb_tablet_title"
            android:textSize="@dimen/text_title_size"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"/>

        <ListView
            android:id="@+id/list_tablet_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:cacheColorHint="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/colorPrimaryDark">

            <Button
                android:id="@+id/btn_usb_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_delete"/>
            <Button
                android:id="@+id/btn_usb_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_refresh"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>