<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mic_title"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/btnReward"
            android:background="@drawable/image_background"
            android:src="@drawable/ic_mic_white_48dp"
            android:layout_weight="0.19" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mic_text"
            android:textSize="20dp"
            android:layout_weight="0.43" />

        <ImageButton
            android:id="@+id/btnMicBack"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_adb"
            android:src="@drawable/ic_navigate_before_white_36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mic_back"
            android:textSize="20dp"
            android:id="@+id/textView" />
    </LinearLayout>
</LinearLayout>